Wrote the Ajax call for POST and GET for Status. added form for status Input in html file added button for Get Request for status

--- a/index.html
+++ b/index.html
@@ -12,6 +12,122 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-  <img src="https://user-images.githubusercontent.com/27626771/30005673-a6f86b66-90b5-11e7-8c25-1df37f50bd8c.png" alt="under_construction copy">
+      <h1>Grubbable</h1>
+
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+          <!-- <div class="navbar-header">
+          </div> -->
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right ">
+                  <li><a id="sign-up-btn" href="#"><span class="glyphicon glyphicon-user shw"></span> Sign Up</a></li>
+                  <li><a id="login-btn" href="#"><span class="glyphicon glyphicon-user shw"></span> Login</a></li>
+                  <li><a id="changePassword-btn" href="#"><span class="glyphicon glyphicon-user shw"></span> change-password</a></li>
+                  <li><a id="sign-out-btn" href="#"><span class="glyphicon glyphicon-user shw"></span> Sign-out</a></li>
+                  <li><a id="update-info-btn" data-toggle="modal" data-target="#myModal">updateInfo</a></li>
+                </ul>
+          </div>
+        </div>
+      </nav>
+        <div class="container col-sm-4">
+
+      <!-- <div class="form"> -->
+      <form id="sign-up">
+      <h2>SIGN-UP</h2>
+      <div>
+        <label for="role">Name</label>
+      <input type="text" name="credentials[name]" class="form-control" id="name">
+      </div>
+      <div class="form-group">
+        <label for="email">EMAIL</label>
+        <input type="email" name="credentials[email]" class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="pwd">PASSWORD</label>
+        <input type="password" name="credentials[password]" class="form-control" id="pwd">
+      </div>
+      <div class="form-group">
+        <label for="pwd">CONFIRM PASSWORD</label>
+        <input type="password" name="credentials[password_confirmation]" class="form-control" id="pwd">
+      </div>
+      <div class="form-group">
+        <label for="age">AGE</label>
+        <input type="text" name="credentials[age]" class="form-control" >
+      </div>
+      <div class="form-group">
+        <label for="address">ADDRESS</label>
+        <input type="text" name="credentials[address]" class="form-control" id ="address">
+      </div>
+      <button type="submit" class="btn btn-success btn-block">Sign Up</button>
+      </form>
+      <!--sign-in form-->
+      <form id="sign-in">
+      <h2>Login</h2>
+      <div class="form-group">
+        <label for="email">EMAIL</label>
+        <input type="email" name="credentials[email]"  class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="pwd">PASSWORD</label>
+        <input type="password" name="credentials[password]" class="form-control" id="pwd">
+      </div>
+      <button type="submit" class="btn btn-primary btn-block" class="sin">LOGIN</button>
+      <h3> New User signUp first</h3>
+      </form>
+      <!--changepassword form-->
+      <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">UPDATE-INFORMATION </h4>
+
+      <form id="updateinfo">
+      <div class="form-group">
+        <label for="role">Name</label>
+      <input type="text" name="credentials[name]" class="form-control" >
+      </div>
+      <div class="form-group">
+        <label for="age">AGE</label>
+        <input type="text" name="credentials[age]" class="form-control" >
+      </div>
+      <div class="form-group">
+        <label for="address">ADDRESS</label>
+        <input type="text" name="credentials[address]" class="form-control" id ="address">
+      </div>
+      <button type="submit" class="btn btn-success btn-block">updateInfo</button>
+      </form>
+      </div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-default " data-dismiss="modal">CLOSE</button>
+        </div>
+      </div>
+      </div>
+      </div>
+      <!-- </div> -->
+      <form id="changePassword">
+      <h3>Change Password</h3>
+      <div class="form-group">
+      <label for="pwd">OLD-PASSWORD</label>
+      <input type="password" name="passwords[old]" class="form-control" >
+      </div>
+      <div class="form-group">
+      <label for="pwd">NEW-PASSWORD</label>
+      <input type="password" name="passwords[new]" class="form-control" >
+      </div>
+      <button type="submit" class="btn btn-primary btn-block">CbangePassword</button>
+      </form>
+      </div>
+      <!--this div will append the follower info"-->
+      <div class= "container" >
+        <div id= 'profile-name'class= 'profile-name'> </div>
+        <form id="special">
+          <div class= 'status  col-md-4'><input type ="text" name ='status[status]' class="form-control" placeholder ='Whats on your mind ?'></div>
+       <div class="col-sm-2 stat-up "><button type="submit" class="btn btn-success btn-block" > post </button></div>
+    </form>
+      <div >
+        <button id ="see-status" type="button"> status</button>
+      </div>
+      </div>
+
     </body>
 </html>
