made changes in ui.js on statusPostSuccess function to make the status show up on the screen

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
        <div class="col-sm-2 stat-up "><button type="submit" class="btn btn-success btn-block" > post </button></div>
     </form>
       <div id="see-status">
-
+<p> helodjhwrewoirtuoeitopiofpdisofuiewi </p>
       </div>
       <button id ="get-status" type="button"> status</button>
       </div>
