getting the user table by handlebars now i have to work on showing all the users of same name for this I think backend show function needs updation

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
       </div>
     </div>
 <!--button to see all the users -->
-<div id ="display-user" class="table-responsive display-user">
+<div id ="display-user" class="table-responsive display-user" hidden="true">
   <table class="table table-striped table-bordered">
-    <thead>
+    <thead class="head1">
       <tr>
         <th>NAME</th>
         <th>ABOUT</th>
-      <th>FOLLOW</th>
+      <th>ADD-FRIEND</th>
       </tr>
     </thead>
     <tbody id="addUser" class="addUser">
