add friend function is working fine but should show message if user is already added as a friend

--- a/index.html
+++ b/index.html
@@ -147,11 +147,17 @@
 
   <button type=" button " class ="btn btn-default" id = "see-user">Get all user</button>
 </div>
+
 <div class= "col-sm-2">
   <form id ="search-user">
 <input type="text" name="credentials[name]" placeholder="find your friend">
 <button type= "submit" class="btn btn-primary btn-block col-sm-2 ">find friend</button>
 </form>
 </div>
+<div id = "testing">
+  <!-- <h3>about user</h3>
+  <a href="#" data-toggle="popover" title="about me" data-content = "about me"> -->
+</div>
+
     </body>
 </html>
